<resources>
    <string name="app_name" translatable="false">Lyra</string>
    <string name="play_pause_button">Reproducir/Pausar</string>
    <string name="RecordingDate">Fecha de grabación: %s</string>
    <string name="Folder">Carpeta: %s</string>
    <string name="additionalInfo">Información adicional: %s</string>
    <string name="more_info">Ver detalles</string>
    <string name="recordings_beatUsed">Beat: %s</string>
    <string name="recordingLength">"Duración: %f segundos"</string>
    <string name="recordingDate">"Fecha de grabación: %s"</string>
    <string name="recordingParentFolder">"Carpeta: %s"</string>
    <string name="recordingAdditionalInfo">"Información adicional: %s"</string>
    <string name="secondsUnit">" segundos"</string>
    <string name="openRecordingActivity">Ir a grabadora</string>
    <string name="openRecordingLibraryActivity">Ir a registro de grabaciones</string>
    <string name="alreadyOpen">La actividad ya está abierta.</string>
    <string name="audio_control_button">Grabar / Parar grabación</string>
    <string name="addNewBeatLabel">Importar instrumental</string>
    <string name="infoLabelStartRecording">Pulse el botón para iniciar la grabación</string>
    <string name="RecordingTitle">Título de la grabación:</string>
    <string name="save_recording_button">Guardar grabación</string>
    <string name="discard_recording_button">Borrar grabación</string>
    <string name="addNewNoteButton">Nueva nota</string>
    <string name="delete_note">Botón para borrar la nota.</string>
    <string name="saveNoteButton">Guardar nota</string>
    <string name="profile_image">Foto de perfil del usuario, permite navegar hasta el perfil de usuario.</string>
    <string name="username_profile_label">Nombre de usuario: %s</string>
    <string name="emailProfileLabel">Email: %s</string>
    <string name="update_password">Actualizar contraseña</string>
    <string name="StartVoiceRecognition">Iniciar reconocimiento de voz</string>
    <string name="navigateToBeatsButton">Navegar a registro de instrumentales</string>
    <string name="navigateToRecordings">Navegar a registro de grabaciones</string>
    <string name="navigateToRecorder">Navegar a grabadora</string>
    <string name="navigateToNotes">Navegar a registro de notas</string>
    <string name="wrd_recorder">grabadora</string>
    <string name="wrd_record">grabar</string>
    <string name="wrd_recording">grabación</string>
    <string name="wrd_recordings">grabaciones</string>
    <string name="wrd_voiceNote">notas de voz</string>
    <string name="wrd_instrumentals">instrumentales</string>
    <string name="wrd_instrumentalLibrary">registro de instrumentales</string>
    <string name="wrd_beatLibrary">registro de beats</string>
    <string name="wrd_beats">beats</string>
    <string name="wrd_bits">bits</string>
    <string name="wrd_notes">notas</string>
    <string name="wrd_noteLibrary">registro de notas</string>
    <string name="wrd_write">escribir</string>
    <string name="wrd_text">texto</string>
    <string name="startVoiceRecognition">Iniciar reconocimiento de voz</string>
    <string name="description_usernameField">Campo de nombre de usuario o email</string>
    <string name="description_passwordField">Campo para la contraseña</string>
    <string name="createNewAccountButton">Botón de crear nueva cuenta\n</string>
    <string name="description_signInButton">Botón de iniciar sesión</string>
    <string name="description_LyraLogo">Logo de Lyra.</string>
    <string name="login_voiceLabel">Puede decir \"Acceder\" o \"Crear cuenta\" para realizar las acciones.</string>
    <string name="signUp_voiceLabel">Puede decir \"Crear cuenta\" para realizar las acciones.</string>
    <string name="wrd_signIn">acceder</string>
    <string name="wrd_access">acceso</string>
    <string name="wrd_login">login</string>
    <string name="wrd_create">crear</string>
    <string name="wrd_createAccount">crear cuenta</string>
    <string name="wrd_account">cuenta</string>
    <string name="wrd_register">registrar</string>
    <string name="wrd_registry">registro</string>
    <string name="info_voiceReconButton">Boton para iniciar el reconocimiento de voz</string>
</resources>