<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_theme_onBackground"
    android:textAlignment="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="400sp">

            <com.example.proyectopgl.ui.controller.AudioControlButton
                android:id="@+id/audioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="112dp"
                android:layout_marginEnd="116dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="84dp"
                android:layout_marginTop="76dp"
                android:foregroundTint="#FFFFFF"
                android:text="@string/infoLabelStartRecording"
                android:textColor="@color/common_google_signin_btn_text_dark_default"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/audioButton" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#FFFFFF" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:textAlignment="center">

            <CheckBox
                android:id="@+id/checkBox3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="10sp"
                android:gravity="center"
                android:text="Activar/Desactivar supresión de ruido"
                android:textColor="@color/md_theme_background" />

            <EditText
                android:id="@+id/recordingTitleET"
                android:layout_width="258dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="25sp"
                android:background="@color/md_theme_background"
                android:hint="@string/RecordingTitle"
                android:textAlignment="center"
                android:textColorHint="@color/md_theme_onBackground"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="137dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/playButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="75sp"
                    android:layout_marginTop="25sp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:tint="#FFFFFF"
                    app:srcCompat="@drawable/baseline_play_arrow_16" />

                <SeekBar
                    android:id="@+id/seekBar"
                    style="@style/Widget.AppCompat.SeekBar.Discrete"
                    android:layout_width="235sp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25sp"
                    android:layout_marginRight="75sp"
                    android:progressTint="@color/md_theme_primaryFixed" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25sp"
                android:layout_marginRight="25sp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button3"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10sp"
                    android:layout_weight="1"
                    android:text="@string/save_recording_button"
                    android:textColor="#FFFFFF"
                    app:iconTint="#FF0000" />

                <Button
                    android:id="@+id/button4"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10sp"
                    android:layout_weight="1"
                    android:text="@string/discard_recording_button"
                    android:textColor="#FFFFFF"
                    app:iconTint="#FF0000" />
            </LinearLayout>

        </LinearLayout>

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#FFFFFF" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        app:srcCompat="@drawable/baseline_menu_36" />

    <com.example.proyectopgl.ui.view.MenuView
        android:id="@+id/menuView"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_gravity="bottom"
        android:layout_marginBottom="25dp"/>
    <com.example.proyectopgl.ui.view.ToolbarView
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="top" />

</FrameLayout>